--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>orm</module>
         <module>aop</module>
         <module>web</module>
+        <module>webComment</module>
     </modules>
 
     <properties>
@@ -30,6 +31,8 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.30</slf4j.version>
         <druid.version>1.1.21</druid.version>
+        <fastjson.version>1.2.66</fastjson.version>
+<!--        <jackson.version>2.10.3</jackson.version>-->
     </properties>
 
     <dependencies>
@@ -48,6 +51,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
         <!--Spring-test模块依赖-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -96,5 +100,63 @@
             <version>${druid.version}</version>
         </dependency>
 
+<!--        Spring 事务-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+<!--        Spring MVC-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+<!--        Spring WebMvc-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+<!--        https://mvnrepository.com/artifact/com.alibaba/fastion-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>
+
+
+        <!--        <dependency>-->
+<!--            <groupId>com.google.code.gson</groupId>-->
+<!--            <artifactId>gson</artifactId>-->
+<!--            <version>2.8.0</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
+<!--            <artifactId>jackson-dataformat-xml</artifactId>-->
+<!--            <version>2.8.5</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            <version>3.1.0</version>-->
+<!--        </dependency>-->
+<!--        -->
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>jstl</artifactId>-->
+<!--            <version>1.2</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
